--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -57,7 +58,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.6;
   --bs-body-color: #212529;
-  --bs-body-bg: #f8fafc;
+  /* --bs-body-bg: lightblue; */
 }
 
 *,
@@ -72,6 +73,37 @@
   }
 }
 
+
+/* Nav Menu */
+.main_list{
+  width: 600px;
+  height: 65px;
+  float: right;
+}
+
+.main_list ul{
+  width:100%;
+  height: 65px;
+  display: flex;
+  list-style: none;
+}
+
+.main_list ul li{
+  width: 120px;
+  height: 65px;
+}
+
+.main_list ul li a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  line-height: 65px;
+  text-transform: uppercase;
+}
+
+.main_list ul li a:hover{
+  color:blueviolet;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -80,9 +112,11 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /* background-color: var(--bs-body-bg); */
+  background-image: radial-gradient(circle at 50% 120.71%, #abffff 0, #92ffff 10%, #7bffff 20%, #67ffff 30%, #5affff 40%, #53f2f2 50%, #51d7de 60%, #52bfcc 70%, #53abbb 80%, #549aac 90%, #548c9f 100%);  background-repeat:round;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  
 }
 
 hr {
@@ -4039,6 +4073,7 @@ textarea.form-control-lg {
 .navbar > .container-lg,
 .navbar > .container-xl,
 .navbar > .container-xxl {
+
   display: flex;
   flex-wrap: inherit;
   align-items: center;
